.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Payee__c/fields/Contract_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period__c</fullName>
    <description>This field indicates the period (1 week, 2 weeks, or 4 weeks) that the contracted hours are calculated over, assisting in accurate TOIL and payroll calculations.</description>
    <inlineHelpText>Select the duration over which the contracted hours apply</inlineHelpText>
    <label>Contract Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 week</fullName>
            </value>
            <value>
                <fullName>2 weeks</fullName>
            </value>
            <value>
                <fullName>4 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>