.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Payee__c/fields/Contracted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Hours__c</fullName>
    <description>This field represents the total contracted hours associated with this payee. It helps in calculating TOIL and other payroll-related metrics.</description>
    <inlineHelpText>Enter the total contracted hours for this payee.</inlineHelpText>
    <label>Contracted Hours</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>