.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Payee__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <formula>text(tc9_pr__Employee__r.aa_Employment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Employment Type as set on the Person record</inlineHelpText>
    <label>Employment Type</label>
    <type>Text</type>
</CustomField>