.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Payee__c/fields/Overtime_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Treatment__c</fullName>
    <inlineHelpText>How is overtime treated.  Defaulted based on the employees employment type (FT/PT = TOIL, other = OT)</inlineHelpText>
    <label>Overtime Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OT Paid</fullName>
            </value>
            <value>
                <fullName>Time Off in Lieu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>