.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Payee__c/fields/Payroll_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Tax_Exempt__c</fullName>
    <inlineHelpText>Indicates the payee is payroll tax exempt - please ensure there is no Payroll Tax Payee Withholding record</inlineHelpText>
    <label>Payroll Tax Exempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>